--- a/index.html
+++ b/index.html
@@ -9,29 +9,20 @@
 <body>
     <header>
         <h1>BAD MAN</h1>
-        <nav>
-            <ul>
-                <li><a href="https://open.spotify.com/intl-es/track/4mthtusDxvnrdNLUmmVXXI?si=3799c678b7c44e31">SPOTIFY</a></li>
-                <li><a href="https://music.apple.com/bo/album/sabor-a-ti-single/1762635414">APPLE MUSIC</a></li>
-                <li><a href="https://www.youtube.com/watch?v=J_bkSXF_adU">YOUTUBE</a></li>
-                <li><a href="https://www.instagram.com/soysaulmalagon/">INSTAGRAM</a></li>
-                <li><a href="https://www.tiktok.com/@soysaulmalagon">TIK TOK</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
-        <section id="spotify">
+        <section id="special-reserve">
             <a href="https://open.spotify.com/intl-es/track/4mthtusDxvnrdNLUmmVXXI?si=3799c678b7c44e31">
                 <h1><div class="img_logo"></div><span>SPOTIFY</span></h1>
             </a>
         </section>
-        <section id="applemusic">
+        <section id="menu">
             <a href="https://music.apple.com/bo/album/sabor-a-ti-single/1762635414">
                 <h1><div class="img_logo_am"></div><span>APPLE MUSIC</span></h1>
             </a>
         </section>
-        <section id="youtube">
+        <section id="workshop">
             <a href="https://www.youtube.com/watch?v=J_bkSXF_adU">
                 <h1><div class="img_logo_yt"></div><span>YOUTUBE</span></h1>
             </a>
@@ -53,7 +44,6 @@
     </footer>
 </body>
 </html>
-
 <!--
                              #                 
               #             ###             #
